# SundownDrive

./: .gitignore  CMakeLists.txt  main.cpp
assets/models/: fir.mtl  street_lamp.mtl
assets/textures/: lamp_glow.ppm
shaders/: basic.frag  basic.vert  emissive.frag  emissive.vert  shadow_depth.frag  shadow_point.frag  skybox.vert
src/core/: Camera.cpp  Camera.h  Input.cpp  Input.h  Shader.cpp  Shader.h
src/gameplay/: Car.cpp  Car.h  Collision.h  TrafficCar.cpp  TrafficCar.h
src/rendering/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
src/scene/: Road.cpp  Road.h  Scene.cpp  Scene.h  StaticObject.cpp  StaticObject.h  Terrain.cpp  Terrain.h
src/utils/: Colors.h  Constants.h  Transform.h
